header section add

--- a/product.html
+++ b/product.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SwiftCart</title>
+    <title>Products</title>
 
     <!-- favicon  -->
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
 
     <!-- fontawsone cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -27,7 +27,6 @@
     <!-- stylesheet -->
     <link rel="stylesheet" href="./style/style.css">
 </head>
-
 <body>
      <!-- header section  -->
     <header>
@@ -43,8 +42,8 @@
                     </div>
                     <ul tabindex="-1"
                         class="menu menu-sm dropdown-content font-bold  bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
-                        <li><a>Home</a></li>
-                        <li><a href="./product.html">Products</a></li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a>Products</a></li>
                         <li><a>About</a></li>
                         <li><a>Contact</a></li>
                     </ul>
@@ -53,18 +52,18 @@
             </div>
             <div class="navbar-center hidden lg:flex">
                 <ul class="menu menu-horizontal px-1">
-                    <li><a class="font-bold text-gray-500 hover:text-blue-500">Home</a></li>
-                    <li><a href="./product.html" class="font-bold text-gray-500 hover:text-blue-500">Products</a></li>
+                    <li><a href="./index.html" class="font-bold text-gray-500 hover:text-blue-500">Home</a></li>
+                    <li><a class="font-bold text-gray-500 hover:text-blue-500">Products</a></li>
                     <li><a class="font-bold text-gray-500 hover:text-blue-500">About</a></li>
                     <li><a class="font-bold text-gray-500 hover:text-blue-500">Contact</a></li>
                 </ul>
             </div>
             <div class="navbar-end mr-8">
                 <div class="indicator -top-5 -right-8">
-                    <span id="cart-count" class="indicator-item font-semibold cart-count">12</span>
+                    <span id="cart-count" class="indicator-item font-semibold">12</span>
                 </div>
                 <a><i class="fa-solid text-2xl fa-cart-shopping"></i>
-                   
+
                 </a>
             </div>
         </div>
