hero  section add

--- a/index.html
+++ b/index.html
@@ -69,5 +69,50 @@
             </div>
         </div>
     </header>
+
+    
+    <!-- hero section  -->
+    <section>
+        <div class="hero min-h-150 " style="background-image: url(./assets/banner-image.png);">
+            <div class="hero-overlay"></div>
+            <div class="hero-content text-neutral-content text-left ">
+                <div class="max-w-md ">
+                    <h1 class="mb-5 text-5xl font-bold">Best Collection For You</h1>
+                    <p class="mb-5">
+                        Discover the latest trends in fashion, electronics, and more.
+                        Shop with confidence and style at Swiftcard.
+                    </p>
+                    <button class="btn btn-primary">Shop Now</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- why choose us section -->
+    <section>
+        <div class="mt-8">
+            <h1 class="text-3xl font-bold text-center mb-4">Why Choose Us</h1>
+            <p class="text-center mb-8">We Provide the best shopping experience with top-notch services.</p>
+        </div>
+        <!-- card section  -->
+        <div class="flex mt-16 gap-8 justify-center flex-wrap">
+            <!-- card-1  -->
+            <div class="card bg-base-100 w-96 shadow-sm indicator">
+                <div class="card-body">
+                    
+                    <div class="card mb-8">
+                        <div class="relative">
+                            <div
+                                class=" absolute -top-16 -left w-16 bg-indigo-50 h-16 rounded outline-4 outline-neutral-100 shadow-lg flex items-center justify-center">
+                                <i class="fa-regular fa-truck text-4xl text-indigo-700"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <h2 class="card-title ">Fast Delivery</h2>
+                    <p class="text-gray-500 font-semibold">
+                        Get your orders delivered to your doorstep quickly and efficiently
+                    </p>
+                </div>
+            </div>
 </body>
 </html>
