--- a/product.html
+++ b/product.html
@@ -68,5 +68,32 @@
             </div>
         </div>
     </header>
+
+    <!-- product section  -->
+    <section class="ml-8 mr-8">
+        <div>
+            <h1 class="text-3xl font-bold text-center mt-8 mb-8">Our Products</h1>
+            <div class="flex flex-wrap justify-center gap-4">
+                <button class="btn btn-outline rounded-full btn-primary" onclick="filterCategory('all')">All</button>
+                <button class="btn btn-outline rounded-full btn-primary"
+                    onclick="filterCategory('electronics')">Electronics</button>
+                <button class="btn btn-outline rounded-full btn-primary"
+                    onclick="filterCategory('jewelery')">Jewelry</button>
+                <button class="btn btn-outline rounded-full btn-primary"
+                    onclick="filterCategory('men\'s clothing')">Men's Clothing</button>
+                <button class="btn btn-outline rounded-full btn-primary"
+                    onclick="filterCategory('women\'s clothing')">Women's Clothing</button>
+            </div>
+            <div>
+                <div class="flex justify-center">
+                    <div id="products-container"
+                        class="grid grid-cols md:grid-cols-4 mt-16 gap-8 justify-center flex-wrap">
+                        <!-- product card  -->
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
