--- a/product.html
+++ b/product.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,8 +28,10 @@
     <!-- stylesheet -->
     <link rel="stylesheet" href="./style/style.css">
 </head>
+
 <body>
-     <!-- header section  -->
+
+    <!-- header section  -->
     <header>
         <div class="navbar bg-base-100 shadow-sm">
             <div class="navbar-start">
@@ -95,5 +98,92 @@
             </div>
         </div>
     </section>
+
+
+    <!-- footer section  -->
+    <section class="mt-16">
+        <footer class="footer sm:footer-horizontal bg-base-200 text-base-content p-10">
+            <aside>
+                <h3 class="text-xl font-bold">
+                    SwiftCart
+                </h3>
+                <p>
+                    Your one-stop shop for all your fashion </br> and lifestyle needs.
+                    Quality products, </br> fast delivery, and excellent support.
+                </p>
+            </aside>
+            <nav>
+                <h6 class="footer-title">Quick Links</h6>
+                <a class="link link-hover">Home</a>
+                <a class="link link-hover">Products</a>
+                <a class="link link-hover">About</a>
+                <a class="link link-hover">Contact</a>
+            </nav>
+            <nav>
+                <h6 class="footer-title">Support</h6>
+                <a class="link link-hover">FAQ</a>
+                <a class="link link-hover">Shipping</a>
+                <a class="link link-hover">Returns</a>
+                <a class="link link-hover">Privacy Policy</a>
+            </nav>
+            <nav>
+                <form>
+                    <h6 class="footer-title">Subscribe to our Newsletter</h6>
+                    <fieldset class="w-80">
+                        <label>The latest news, articles and resources,
+                            sent to your inbox weekly.
+                        </label>
+                        <div class="join">
+                            <input type="text" placeholder="Enter your email" class="input input-bordered join-item" />
+                            <button class="btn btn-primary join-item">Subscribe</button>
+                        </div>
+                    </fieldset>
+                </form>
+            </nav>
+        </footer>
+        <footer
+            class="footer sm:footer-horizontal bg-neutral text-neutral-content items-center p-4 bg-base-200 text-base-content border-base-300 border-t px-10 py-4">
+            <aside class="grid-flow-col items-center">
+
+                <p> © 2025 SwiftCart, Inc. All right reserved</p>
+            </aside>
+            <nav class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
+                <a>
+                    <i class="fa-brands fa-facebook-f"></i>
+                </a>
+                <a>
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
+                <a>
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a>
+                    <i class="fa-brands fa-linkedin-in"></i>
+                </a>
+                <a>
+                    <i class="fa-brands fa-mail"></i>
+                </a>
+            </nav>
+        </footer>
+    </section>
+
+
+    <!-- modal section  -->
+    <section>
+        <!-- Open the modal using ID.showModal() method -->
+        <!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
+        <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+            <div class="modal-box">
+                <div id="product-details" class="space-y-5">
+
+
+                </div>
+            </div>
+        </dialog>
+    </section>
+
+
+    <script src="script/app.js"></script>
 </body>
+
 </html>
