--- a/product.html
+++ b/product.html
@@ -101,71 +101,70 @@
 
 
     <!-- footer section  -->
-    <section class="mt-16">
-        <footer class="footer sm:footer-horizontal bg-base-200 text-base-content p-10">
-            <aside>
-                <h3 class="text-xl font-bold">
-                    SwiftCart
-                </h3>
-                <p>
-                    Your one-stop shop for all your fashion </br> and lifestyle needs.
-                    Quality products, </br> fast delivery, and excellent support.
-                </p>
-            </aside>
-            <nav>
-                <h6 class="footer-title">Quick Links</h6>
-                <a class="link link-hover">Home</a>
-                <a class="link link-hover">Products</a>
-                <a class="link link-hover">About</a>
-                <a class="link link-hover">Contact</a>
-            </nav>
-            <nav>
-                <h6 class="footer-title">Support</h6>
-                <a class="link link-hover">FAQ</a>
-                <a class="link link-hover">Shipping</a>
-                <a class="link link-hover">Returns</a>
-                <a class="link link-hover">Privacy Policy</a>
-            </nav>
-            <nav>
-                <form>
-                    <h6 class="footer-title">Subscribe to our Newsletter</h6>
-                    <fieldset class="w-80">
-                        <label>The latest news, articles and resources,
-                            sent to your inbox weekly.
-                        </label>
-                        <div class="join">
-                            <input type="text" placeholder="Enter your email" class="input input-bordered join-item" />
-                            <button class="btn btn-primary join-item">Subscribe</button>
-                        </div>
-                    </fieldset>
-                </form>
-            </nav>
-        </footer>
-        <footer
-            class="footer sm:footer-horizontal bg-neutral text-neutral-content items-center p-4 bg-base-200 text-base-content border-base-300 border-t px-10 py-4">
-            <aside class="grid-flow-col items-center">
+   <section class="mt-16 bg-black text-white">
+     
+    <footer class="footer sm:footer-horizontal bg-black text-white p-10">
+        <aside>
+            <h3 class="text-xl font-bold">
+                SwiftCart
+            </h3>
+            <p>
+                Your one-stop shop for all your fashion <br> and lifestyle needs.
+                Quality products, <br> fast delivery, and excellent support.
+            </p>
+        </aside>
 
-                <p> © 2025 SwiftCart, Inc. All right reserved</p>
-            </aside>
-            <nav class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
-                <a>
-                    <i class="fa-brands fa-facebook-f"></i>
-                </a>
-                <a>
-                    <i class="fa-brands fa-twitter"></i>
-                </a>
-                <a>
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
-                <a>
-                    <i class="fa-brands fa-linkedin-in"></i>
-                </a>
-                <a>
-                    <i class="fa-brands fa-mail"></i>
-                </a>
-            </nav>
-        </footer>
-    </section>
+        <nav>
+            <h6 class="footer-title text-white">Quick Links</h6>
+            <a class="link link-hover text-gray-300">Home</a>
+            <a class="link link-hover text-gray-300">Products</a>
+            <a class="link link-hover text-gray-300">About</a>
+            <a class="link link-hover text-gray-300">Contact</a>
+        </nav>
+
+        <nav>
+            <h6 class="footer-title text-white">Support</h6>
+            <a class="link link-hover text-gray-300">FAQ</a>
+            <a class="link link-hover text-gray-300">Shipping</a>
+            <a class="link link-hover text-gray-300">Returns</a>
+            <a class="link link-hover text-gray-300">Privacy Policy</a>
+        </nav>
+
+        <nav>
+            <form>
+                <h6 class="footer-title text-white">Subscribe to our Newsletter</h6>
+                <fieldset class="w-80">
+                    <label class="text-gray-300">
+                        The latest news, articles and resources,
+                        sent to your inbox weekly.
+                    </label>
+                    <div class="join mt-2">
+                        <input type="text" placeholder="Enter your email" 
+                               class="input input-bordered join-item text-black" />
+                        <button class="btn btn-primary join-item">Subscribe</button>
+                    </div>
+                </fieldset>
+            </form>
+        </nav>
+    </footer>
+
+    <footer
+        class="footer sm:footer-horizontal bg-black text-white items-center p-4 border-t border-gray-700 px-10 py-4">
+        
+        <aside class="grid-flow-col items-center">
+            <p> © 2025 SwiftCart, Inc. All right reserved</p>
+        </aside>
+
+        <nav class="grid-flow-col gap-4 md:place-self-center md:justify-self-end text-xl">
+            <a class="hover:text-blue-500"><i class="fa-brands fa-facebook-f"></i></a>
+            <a class="hover:text-sky-400"><i class="fa-brands fa-twitter"></i></a>
+            <a class="hover:text-pink-500"><i class="fa-brands fa-instagram"></i></a>
+            <a class="hover:text-blue-400"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a class="hover:text-red-400"><i class="fa-solid fa-envelope"></i></a>
+        </nav>
+    </footer>
+
+</section>
 
 
     <!-- modal section  -->
