--- a/product.html
+++ b/product.html
@@ -73,7 +73,7 @@
     </header>
 
     <!-- product section  -->
-    <section class="ml-8 mr-8">
+    <section class="px-10 md:px-24 lg:px-40 xl:px-56">
         <div>
             <h1 class="text-3xl font-bold text-center mt-8 mb-8">Our Products</h1>
             <div class="flex flex-wrap justify-center gap-4">
@@ -90,7 +90,11 @@
             <div>
                 <div class="flex justify-center">
                     <div id="products-container"
-                        class="grid grid-cols md:grid-cols-4 mt-16 gap-8 justify-center flex-wrap">
+                    class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 
+                     mt-16 gap-8 auto-rows-fr items-stretch  max-w-[1200px] mx-auto w-full">
+
+
+
                         <!-- product card  -->
 
                     </div>
